--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,7 +1,4 @@
-doctype html 
-html 
-    head 
-      title Trang chu
-
-    body 
+extends ../../layouts/default.pug
+block main
+ 
       h1 Danh sach san pham
