--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -2,9 +2,15 @@ doctype html
 html 
     head 
       title #{pageTitle} 
-    body  
+      link( rel ="stylesheet", hrel="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css")
+      link(rel="stylesheet", hrel="/css/style.css")
+      
+body  
 include ../partials/header.pug
  
 block main
 
 include ../partials/footer.pug
+script( scr="/js/scrip.js" )
+script ( src ="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
+script ( src ="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
