--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -10,7 +10,7 @@ block main
       //- Ảnh sản phẩm bên trái
       .col-md-6
         if product.thumbnail
-          img.img-fluid.rounded(src='/' + product.thumbnail, alt=product.title,
+          img.img-fluid.rounded(src= product.thumbnail, alt=product.title,
             style="max-width:100%; max-height:250px; object-fit:contain;")
         else
           img.img-fluid.rounded(src='/images/default.jpg', alt='No image')
